# tiny-transformers-lab

./: .gitignore  CMakeLists.txt
docs/: architecture.md
src/: main.cpp
